<?xml version="1.0"?>
<package>
  <name> eus_java </name>
  <description>
    eus_java
  </description>
  <version>0.0.1</version>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">Noda Shintaro</maintainer>
  <license>NYSL</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>euslisp</build_depend>
</package>
